Cleanup of --auto argument, now named --auto-download-purge. Instead of randomized repositories in tests, round-robin repositories so that the tests are repeatable.